# react-native-baidu-map

./: README.OpenSource  README.md  index.js  package.json
harmony/: baidu_map.har
harmony/baidu_map/: NOTICE  index.ets  oh-package.json5  ts.ts
harmony/baidu_map/src/main/cpp/: BaiduMapEventEmitRequestHandler.h  BaiduMapOverlayArcComponentDescriptor.h  BaiduMapOverlayArcJSIBinder.h  BaiduMapOverlayCircleComponentDescriptor.h  BaiduMapOverlayCircleJSIBinder.h  BaiduMapOverlayClusterComponentDescriptor.h  BaiduMapOverlayClusterJSIBinder.h  BaiduMapOverlayHeatMapComponentDescriptor.h  BaiduMapOverlayHeatMapJSIBinder.h  BaiduMapOverlayInfoWindowComponentDescriptor.h  BaiduMapOverlayInfoWindowJSIBinder.h  BaiduMapOverlayMarkerComponentDescriptor.h  BaiduMapOverlayMarkerIconComponentDescriptor.h  BaiduMapOverlayMarkerIconJSIBinder.h  BaiduMapOverlayMarkerJSIBinder.h  BaiduMapOverlayPolygonComponentDescriptor.h  BaiduMapOverlayPolygonJSIBinder.h  BaiduMapOverlayPolylineComponentDescriptor.h  BaiduMapOverlayPolylineJSIBinder.h  BaiduMapOverlayTextComponentDescriptor.h  BaiduMapOverlayTextJSIBinder.h  BaiduMapPackage.h  BaiduMapViewComponentDescriptor.h  BaiduMapViewJSIBinder.h  CMakeLists.txt  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  NativeTurboModule.cpp  NativeTurboModule.h  Props.cpp  Props.h  ShadowNodes.cpp  ShadowNodes.h  States.h
js/: Geolocation.js  GetDistance.js  MapView.tsx  MapViewNativeComponent.tsx  NativeTurboModule.ts
js/Overlay/: Arc.tsx  ArcNativeComponent.tsx  Circle.tsx  CircleNativeComponent.tsx  Cluster.tsx  HeatMap.tsx  Marker.tsx  (+13 more)
(+14 files in other folders)
