cmake_minimum_required(VERSION 3.13)
set(CMAKE_VERBOSE_MAKEFILE on)
set(rnoh_baidu_map_generated_dir "${RNOH_GENERATED_DIR}/react_native_harmony_baidu_map")
file(GLOB rnoh_baidu_map_SRC CONFIGURE_DEPENDS *.cpp)
add_library(rnoh_baidu_map SHARED ${rnoh_baidu_map_SRC})
target_include_directories(rnoh_baidu_map PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(rnoh_baidu_map PUBLIC rnoh)